# multiplex

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_10_05_0922-ba0c6b908eb5_.py  2024_10_07_0815-07023e626c06_.py  2024_10_07_0939-36f3ad717cb6_.py  2024_10_10_1728-b28d48d98af1_.py  2024_10_12_1011-f56f68851503_.py  2024_10_12_1013-bd05bfb5b4ea_.py  2024_10_18_1154-74479d5326bc_.py  2024_11_14_1332-24b0ad895933_.py
src/: config.py  exceptions.py  main.py  pagination.py
src/api/: include_routers.py
src/api/routers/: cinema.py  movie.py
src/api/schemas/: cinema.py  movie.py  pagination.py
src/database/: session.py
src/database/models/: __init__.py  base.py  cinema.py  hall.py  movie.py  payment.py  screening.py  seat.py  ticket.py  user.py
src/filters/: base.py  movie.py
src/repositories/: cinema.py  movie.py
src/repositories/base/: abstract.py  postgres.py
src/services/: cinema.py  movie.py
src/validators/: movie.py
