[tool.poetry]
name = "multiplex"
version = "0.1.0"
description = ""
authors = ["Grigory Malanchuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.0"}
alembic = "^1.13.3"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
alembic-autogenerate-enums = "^0.1.2"
fastapi-filter = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
